@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-21T00:30:16Z",
-  "count_outdated" : 387,
-  "uniques_outdated" : 82,
+  "timestamp" : "2022-06-22T00:34:30Z",
+  "count_outdated" : 389,
+  "uniques_outdated" : 83,
   "count" : 492,
   "uniques" : 91,
   "views" : [
-    {
-      "timestamp": "2022-06-07T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-08T00:00:00Z",
       "count": 2,
