@@ -1,12 +1,7 @@
 {
-  "count": 105,
-  "uniques": 5,
+  "count": 103,
+  "uniques": 4,
   "views": [
-    {
-      "timestamp": "2022-06-07T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-06-08T00:00:00Z",
       "count": 2,
